--- a/frontend/src/styles/common.css
+++ b/frontend/src/styles/common.css
@@ -8,9 +8,7 @@
 
 body {
   font-size: 16px;
-  overflow-x: hidden;
 }
-
 
 .footer {
   position: relative;
@@ -20,7 +18,6 @@ body {
   line-height: 60px;
   background-color: #f5f5f5;
 }
-
 
 .card {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
